# study_fast_api

./: pyproject.toml
api/cruds/: task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/tests/: test_main.py
