[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
aiomysql = "^0.1.1"
sqlalchemy = "^1.4.44"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.2"
aiosqlite = "^0.17.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
